--- a/src/components/AppLayout/Layout.module.css
+++ b/src/components/AppLayout/Layout.module.css
@@ -15,3 +15,12 @@
   width: 100%;
   height: 100%;
 }
+
+.app_container {
+  display: flex;
+  position: relative;
+  left: 52px;
+  top: 90px;
+  width: 728px;
+  height: 435px;
+}
