--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Noto Sans KR', -apple-system, sans-serif;
+  font-family: -apple-system, sans-serif;
 }
 h1,
 h2,
@@ -55,4 +55,12 @@ textarea {
     color: white;
     background: black;
   }
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  border: 1px solid #000000;
+  border-radius: 10px;
 }
