💄 add SCSS color variables

--- a/src/components/Common/Navbar/Navbar.module.scss
+++ b/src/components/Common/Navbar/Navbar.module.scss
@@ -1,3 +1,5 @@
+@import '@styles/variables.scss';
+
 .navbar {
   display: flex;
   flex-direction: column;
@@ -5,24 +7,24 @@
   position: absolute;
   right: -56px;
   top: 13px;
-}
 
-.navbar a {
-  display: block;
-  height: 34px;
-  line-height: 30px;
-  background: #298eb5;
-  color: #fff;
-  margin-bottom: 3px;
-  font-size: 13px;
-  letter-spacing: -0.8px;
-  text-align: center;
-  border: 1px solid #0f465e;
-  border-left: none;
-  border-radius: 0px 5px 5px 0px;
-}
+  a {
+    display: block;
+    height: 34px;
+    line-height: 30px;
+    background: $main-color-2;
+    color: #fff;
+    margin-bottom: 3px;
+    font-size: 13px;
+    letter-spacing: -0.8px;
+    text-align: center;
+    border: 1px solid $main-color-3;
+    border-left: none;
+    border-radius: 0px 5px 5px 0px;
 
-.navbar a.active {
-  color: #000;
-  background: #fff;
+    &.active {
+      color: #000;
+      background: #fff;
+    }
+  }
 }
