--- a/src/components/Profile/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile/Profile.module.scss
@@ -7,10 +7,9 @@
   width: 150px;
   height: 150px;
   margin: 7px auto;
-}
-
-.myphoto img {
-  width: 100%;
+  img {
+    width: 100%;
+  }
 }
 
 .wrapper {
