--- a/src/components/Home/HomeNav/HomeNav.module.scss
+++ b/src/components/Home/HomeNav/HomeNav.module.scss
@@ -6,12 +6,12 @@
 
   .row {
     display: flex;
-    border-top: 1px dashed #888;
+    border-top: 1px dotted #888;
     height: 22px;
     align-items: center;
     &:last-child {
       height: 18px;
-      border-bottom: 1px dashed #888;
+      border-bottom: 1px dotted #888;
     }
     li {
       font-size: 10px;
