💄 add game sections in Game page

--- a/src/components/Home/BGMs/BGMs.module.scss
+++ b/src/components/Home/BGMs/BGMs.module.scss
@@ -1,13 +1,13 @@
 .bgm_list {
   h2 {
     margin-top: 50px;
-    margin-bottom: 8px;
     border: none;
   }
 }
 
 .table {
   border-collapse: collapse;
+  margin-top: 8px;
   font-size: 13px;
   width: 100%;
 
