--- a/pages/game/game.module.scss
+++ b/pages/game/game.module.scss
@@ -1,19 +1,5 @@
 .games {
-}
-
-.game_section {
-  width: 222px;
-  height: 165px;
-  margin: 0 auto;
-  border: 1px solid #aaa;
-  border-radius: 10px;
-  background-color: #f6f6f6;
-  padding: 20px 0px;
-  text-align: center;
-
-  &.wordchain {
-  }
-  &.lotto {
+  section + section {
     margin-top: 30px;
   }
 }
