--- a/src/components/Home/HomeNav/HomeNav.module.scss
+++ b/src/components/Home/HomeNav/HomeNav.module.scss
@@ -21,6 +21,7 @@
         flex-basis: 54%;
       }
       span {
+        font-size: 11px;
         margin-left: 10px;
         color: $main-color-1;
       }
