--- a/src/components/Game/Lotto/Lotto.module.scss
+++ b/src/components/Game/Lotto/Lotto.module.scss
@@ -1,4 +1,5 @@
 @import '@styles/variables.scss';
+@import '@styles/mixins.scss';
 
 .lotto {
   ul {
@@ -19,16 +20,7 @@
   }
 
   button {
-    padding: 3px 12px;
-    font-size: 12px;
-    background: #fff;
-    border: 1px solid #aaa;
-    border-radius: 5px;
-    transition: all 0.1s ease 0s;
-    cursor: pointer;
-    &:hover {
-      background: #aaa;
-      color: #fff;
-    }
+    @include btn;
+    letter-spacing: -0.3px;
   }
 }
