--- a/src/components/Common/ButtonWrap/ButtonWrap.module.scss
+++ b/src/components/Common/ButtonWrap/ButtonWrap.module.scss
@@ -1,7 +1,7 @@
 @import '@styles/variables.scss';
 
 .btn_wrap {
-  margin: 15px;
+  margin: 15px 0 10px;
   display: flex;
   align-items: center;
   justify-content: center;
