--- a/src/components/Home/LatestDiary/LatestDiary.module.scss
+++ b/src/components/Home/LatestDiary/LatestDiary.module.scss
@@ -6,16 +6,16 @@
   height: 80px;
   margin-top: 4px;
   margin-left: 3px;
-  li {
+  li + li {
+    margin-top: 5px;
+  }
+  a {
     font-size: 12px;
     display: flex;
     align-items: center;
     img {
       width: 35px;
       margin-right: 5px;
-    }
-    & + li {
-      margin-top: 5px;
     }
   }
 }
