--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -37,9 +37,9 @@
   width: 70px;
   height: 24px;
   line-height: 22px;
-  border: 1px solid $gray-color-1;
-  background-color: $gray-color-4;
+  // border: 1px solid $gray-color-1;
+  background-color: #ddd;
   font-size: 12px;
-  color: #fff;
+  color: #666;
   cursor: pointer;
 }
